# ECE535-Smart-Doorbell

./: .gitignore  Design Goals  Motivation  README.md  main.py  pyproject.toml
FCSN/: FNSN_new.py  FNSN_old.py  Facial_Comparison_Siamese_Network.ipynb  MobileFaceNet_9925_9680.tflite  face_embedding.tflite  face_embedding_test.py  run_FNSN  run_FNSN.py
FNCS/: run_FNCS
faceDetection/: .gitignore  TFLiteFaceDetector.py  inference_test.py  main.py  pyproject.toml  takePicture.py
