[project]
name = "ece535-smart-doorbell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.20.0",
]
[tool.uv]
python = "/usr/bin/python3"
