[project]
name = "facedetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "face-recognition>=1.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
